<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Gozinta</string>
    <string name="str_main_screen_image">People getting served food by a waiter</string>
    <string name="str_btn_start">Start</string>
    <string name="str_author">Created by Raj Ramsaroop</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_bill">Restaurant Bill</string>
    <string name="str_txt_bill">Enter dollar amount</string>
    <string name="str_lbl_num_of_people">Number of people:</string>
    <string name="str_txt_num_people">Enter number</string>
    <string name="str_lbl_quality">Rate the quality of service:</string>

    <string-array name="arr_str_ratings">
        <item android:id="@+id/rating_excellent" android:layout_width="wrap_content" android:layout_height="wrap_content">Excellent</item>
        <item android:id="@+id/rating_average" android:layout_width="wrap_content" android:layout_height="wrap_content">Average</item>
        <item android:id="@+id/rating_poor" android:layout_width="wrap_content" android:layout_height="wrap_content">Poor</item>
    </string-array>

    <string name="str_btn_calculate">Calculate</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="str_lbl_total">Total</string>
    <string name="str_plus">Plus</string>
    <string name="str_hr">Horizontal Rule</string>
    <string name="str_total_placeholder">$70</string>
    <string name="str_tip_placeholder">$12.60</string>
    <string name="str_lbl_tip_placeholder">Tip Amount (18%)</string>
    <string name="str_final_total_placeholder">Final total: $82.60</string>
    <string name="str_cost_per_person_label_placeholder">Cost per person (4 people):</string>
    <string name="str_cost_per_person_placeholder">$20.65</string>
    <string name="str_quality_placeholder">Service quality:</string>
    <string name="str_mnu_input_japan">I\'m in Japan&#8230;</string>
    <string name="title_activity_japan">JapanActivity</string>
    <string name="str_meme_desc">Batman slapping Robin meme</string>

</resources>