<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/txtBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/str_total_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBillTotal"
        android:layout_centerHorizontal="true"
        android:text="@string/str_lbl_total"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imgPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTotal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/str_plus"
        android:src="@drawable/plus" />

    <TextView
        android:id="@+id/txtTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPlus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/str_tip_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTipAmount"
        android:layout_centerHorizontal="true"
        android:text="@string/str_lbl_tip_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imgHorizontalRule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTipAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/str_hr"
        android:src="@drawable/horizontal_rule" />

    <TextView
        android:id="@+id/txtFinalTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgHorizontalRule"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/str_final_total_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblCostPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFinalTotal"
        android:layout_below="@+id/txtFinalTotal"
        android:layout_marginTop="16dp"
        android:text="@string/str_cost_per_person_label_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtCostPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCostPerPerson"
        android:layout_centerHorizontal="true"
        android:text="@string/str_cost_per_person_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
